<resources>
    <string name="app_name">MyTravelCompanion</string>
    <string name="enter_amount">Enter amount</string>
    <string name="currency_converter">Currency Conversion</string>
    <string name="convert">Convert</string>
    <string name="result_will_appear_here">Result will show here</string>
    <string name="tell">tell them more</string>
    <string name="Fuel">"Fuel Efficiency "</string>
    <string name="enter_distance">Enter value</string>
    <string name="showResult">Result will show here</string>
    <string name="Temp">Temperature</string>
</resources>